frontend/test/should_fail/computations_no_exec_yield.grg
rule r(var n:int) : (int)
{
	modify {
		def var res:int = 0; 
		exec( { (res) = foo(); } ); // yield missing
		return( res );
	}
}

procedure foo() : (int)
{
	return(1);
}


